--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@
 h3 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  background-color: rgba(182, 205, 233, 0.301);
 }
 
 .layout-wrapper {
@@ -26,24 +27,30 @@ h3 {
   text-align: end;
   font-size: 1.5rem;
   padding: 0.5rem;
+  border: 3px solid black;
+  margin-bottom: 0.5rem;
+  border-radius: 20px;
 }
 
 .display-number {
   height: 3rem;
   line-height: 3rem;
-  background-color: white;
+  background-color: beige;
   text-align: end;
   font-size: 2rem;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   overflow: hidden;
+  border: 5px solid black;
+  border-radius: 20px;
 }
 
 .keys {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1.2fr;
+  grid-template-rows: repeat(5, 4rem);
+
   background-color: beige;
-  height: calc(50vh - 6rem);
   gap: 0.5rem;
 }
 
@@ -54,34 +61,38 @@ h3 {
   margin: 0.5rem;
   text-align: right;
   font-size: 1.5rem;
-  overflow-x: auto;
+  overflow-y: auto;
 }
 
-.button,
-.button-1,
-.button-2 {
+.button {
   background-color: rgb(47, 143, 207);
   border-radius: 20px;
   font-size: 1.5rem;
   border: none;
-  /* width: 80%;
-  height: 80%; */
-  /* margin: auto; */
+}
+
+.button:hover {
+  background-color: rgb(62, 131, 177);
+  cursor: pointer;
 }
 
 .button-1 {
   background-color: coral;
 }
+.button-1:hover {
+  background-color: rgb(212, 118, 83);
+}
 
 .button-2 {
   background-color: rgb(0, 102, 255);
+}
+.button-2:hover {
+  background-color: rgb(33, 97, 192);
 }
 
 @media only screen and (min-width: 600px) {
   .layout-wrapper {
     flex-direction: row;
-    width: 60vw;
-    height: 100vh;
     margin: 0 auto;
   }
 
@@ -89,9 +100,7 @@ h3 {
     width: 40%;
   }
 
-  .button,
-  .button-1,
-  .button-2 {
+  .button {
     font-size: 2rem;
   }
 
