--- a/index.css
+++ b/index.css
@@ -9,15 +9,83 @@ h3 {
   background-color: rgba(182, 205, 233, 0.301);
 }
 
+a {
+  font-size: 0.8em;
+}
+
+.menu-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+
+  /* background-color: rgb(235, 157, 157); */
+}
+
+.menu {
+  position: relative;
+  display: none;
+}
+
+.menu-active {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: rgb(104, 156, 235);
+  width: 30%;
+  height: 100vh;
+}
+
+.menu-start {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  padding-top: 1rem;
+}
+
+.menu-item {
+  text-decoration: none;
+  color: #ffff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 0.8rem;
+  align-items: center;
+}
+
 .layout-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
+  width: 100vw;
   background-color: white;
 }
 
 .display-input-wrapper {
   margin: 0.5rem;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  height: 1.2rem;
+  background-color: rgb(104, 156, 235);
+  margin: 0.3rem auto;
+  border-radius: 10px;
+  justify-content: center;
+}
+
+.burger-menu {
+  width: 3rem;
+}
+
+.menu-icon {
+  width: 30px;
+  height: 2px;
+  background-color: coral;
+  margin: 3px 10px;
 }
 
 .display-calc {
@@ -88,6 +156,25 @@ h3 {
 }
 .button-2:hover {
   background-color: rgb(33, 97, 192);
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  color: #ddd;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.footer-item {
+  text-decoration: none;
+  color: #ffff;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-size: 0.8rem;
+  align-items: center;
 }
 
 @media only screen and (min-width: 600px) {
